--- a/template-Egens-Landing-Page-main/style.css
+++ b/template-Egens-Landing-Page-main/style.css
@@ -16,3 +16,24 @@ body{
 .nav-item{
     margin-right: 40px;
 }
+.banner-subtitle{
+color: #7153d9;
+font-size: 24px;
+font-weight: 500;
+}
+.banner-tiitle{
+    font-size: 72px;
+    font-weight: 700;
+}
+.banner-text{
+    font-size: 24px;
+    font-weight: 400;
+    color: #54545f;
+    margin-bottom: 50px;
+}
+.banner-btn{
+    text-decoration: none;
+    background: linear-gradient(135deg, #7153d9 0%, #5435be 45%, #4526b1 66%);     color: aliceblue;
+    padding: 15px 30px;
+    border-radius: 30px;
+}
