--- a/template-Egens-Landing-Page-main/style.css
+++ b/template-Egens-Landing-Page-main/style.css
@@ -1,9 +1,13 @@
 body{
-    background-color: #E9EDF4;
+    /* background-color: #E9EDF4; */
     font-family: 'Jost',sans-serif;
 }
 
 
+.banner-color{
+    background-color: #E9EDF4;
+
+}
 .navbar-nav{
     padding: 3;
     margin-left: 50px;
@@ -37,3 +41,15 @@ font-weight: 500;
     padding: 15px 30px;
     border-radius: 30px;
 }
+
+.feature-icon{
+    background-color: #E9EDF4;
+    padding: 60px;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    text-align: center;
+    /* line-height: 6.2; */
+
+}
+
